[docs] #30 Swaggerの更新
